<resources>
    <string name="app_name">Luyện thi bằng A1</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="all_test_exam">Bộ đề thi</string>
    <string name="watch_answer">Xem đáp án</string>
    <string name="start">Bắt đầu</string>
    <string name="retry">Thi lại</string>
    <string name="stop">Kết thúc</string>
    <string name="question_content" formatted="false">Câu %d: %s</string>
    <string name="accept">Đồng ý</string>
    <string name="end">Kết thúc</string>
    <string name="number_question">Câu %d/20</string>
    <string name="result_message">Bạn đã trả lời đúng %d/20 câu hỏi!</string>
    <string name="notice_board">Biển báo giao thông</string>
    <string name="tip_trick">Mẹo thi lý thuyết</string>
    <string name="tip_practice">Kỹ năng thi thực hành</string>
    <string name="prohibit_board">Biển báo cấm</string>
    <string name="dangerous_board">Biển báo nguy hiểm</string>
    <string name="command_board">Biển báo hiệu lệnh</string>
    <string name="instruction_board">Biển báo chỉ dẫn</string>
    <string name="sub_board">Biển báo phụ</string>
    <string name="line_road">Vạch kẻ đường</string>
    <string name="save_drive">Kỹ năng lái xe an toàn</string>

    <string name="banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_full_screen">ca-app-pub-3940256099942544/1033173712</string>
</resources>
