<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_small">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            style="@style/Font_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_subdirectory"
            android:drawableLeft="@drawable/ic_subdirectory"
            android:gravity="center_vertical"
            android:text="Hiện tại hệ thống các loại biển báo giao thông đường bộ của Việt Nam chúng ta chia làm 6 nhóm cụ thể như sau:" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_normal"
            android:layout_marginTop="@dimen/padding_normal"
            android:layout_marginRight="@dimen/padding_normal">

            <TextView
                android:id="@+id/tv_prohibit_board"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawableEnd="@drawable/ic_next"
                android:drawableRight="@drawable/ic_next"
                android:focusable="true"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/padding_normal"
                android:paddingRight="@dimen/padding_normal"
                android:text="@string/prohibit_board"
                android:textAllCaps="true"
                android:textColor="@color/text_color_primary"
                android:textSize="@dimen/font_text_small" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_normal"
            android:layout_marginTop="@dimen/padding_normal"
            android:layout_marginRight="@dimen/padding_normal">

            <TextView
                android:id="@+id/tv_dangerous_board"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawableEnd="@drawable/ic_next"
                android:drawableRight="@drawable/ic_next"
                android:focusable="true"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/padding_normal"
                android:paddingRight="@dimen/padding_normal"
                android:text="@string/dangerous_board"
                android:textAllCaps="true"
                android:textColor="@color/text_color_primary"
                android:textSize="@dimen/font_text_small" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_normal"
            android:layout_marginTop="@dimen/padding_normal"
            android:layout_marginRight="@dimen/padding_normal">

            <TextView
                android:id="@+id/tv_instruction_board"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawableEnd="@drawable/ic_next"
                android:drawableRight="@drawable/ic_next"
                android:focusable="true"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/padding_normal"
                android:paddingRight="@dimen/padding_normal"
                android:text="@string/instruction_board"
                android:textAllCaps="true"
                android:textColor="@color/text_color_primary"
                android:textSize="@dimen/font_text_small" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_normal"
            android:layout_marginTop="@dimen/padding_normal"
            android:layout_marginRight="@dimen/padding_normal">

            <TextView
                android:id="@+id/tv_command_board"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawableEnd="@drawable/ic_next"
                android:drawableRight="@drawable/ic_next"
                android:focusable="true"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/padding_normal"
                android:paddingRight="@dimen/padding_normal"
                android:text="@string/command_board"
                android:textAllCaps="true"
                android:textColor="@color/text_color_primary"
                android:textSize="@dimen/font_text_small" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_normal"
            android:layout_marginTop="@dimen/padding_normal"
            android:layout_marginRight="@dimen/padding_normal">

            <TextView
                android:id="@+id/tv_sub_board"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawableEnd="@drawable/ic_next"
                android:drawableRight="@drawable/ic_next"
                android:focusable="true"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/padding_normal"
                android:paddingRight="@dimen/padding_normal"
                android:text="@string/sub_board"
                android:textAllCaps="true"
                android:textColor="@color/text_color_primary"
                android:textSize="@dimen/font_text_small" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_normal"
            android:layout_marginTop="@dimen/padding_normal"
            android:layout_marginRight="@dimen/padding_normal">

            <TextView
                android:id="@+id/tv_line_road"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:drawableEnd="@drawable/ic_next"
                android:drawableRight="@drawable/ic_next"
                android:focusable="true"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/padding_normal"
                android:paddingRight="@dimen/padding_normal"
                android:text="@string/line_road"
                android:textAllCaps="true"
                android:textColor="@color/text_color_primary"
                android:textSize="@dimen/font_text_small" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_id" />

</LinearLayout>